# app/src/main/kotlin/com/jordi9/doscomas/feature/planning/inbound/GetAccountHandler.kt
@@ -3,7 +3,6 @@ package com.jordi9.doscomas.feature.planning.inbound
 import com.jordi9.doscomas.Registry
 import com.jordi9.doscomas.feature.planning.application.GetAccountUseCase
 import com.jordi9.doscomas.feature.planning.domain.AccountId
-import com.jordi9.doscomas.feature.planning.domain.SpaceId
 import com.jordi9.krat.pack.core.Handler
 import io.ktor.server.application.ApplicationCall
 import io.ktor.server.response.respond
@@ -13,9 +12,8 @@ class GetAccountHandler(
   private val getAccount: GetAccountUseCase
 ) : Handler {
   override suspend fun handle(call: ApplicationCall) {
-    val spaceId: String by call.parameters
     val accountId: String by call.parameters
-    call.respond(getAccount(SpaceId(spaceId), AccountId(accountId)).toResponse())
+    call.respond(getAccount(AccountId(accountId)).toResponse())
   }
 }
 
